cover image test

--- a/_posts/2018-08-07-Vim-script-notes.adoc
+++ b/_posts/2018-08-07-Vim-script-notes.adoc
@@ -1,5 +1,5 @@
 = Vim script notes
-:hp-image: /articles/vim-script.png
+:hp-image: /images/articles/vim-script.png
 :hp-tags: vim, plugin, scripting
 :toc: macro
 :release: 1.0
