adding cover images

--- a/_posts/2018-02-17-Maven-plugin-and-fight-with-classloading.adoc
+++ b/_posts/2018-02-17-Maven-plugin-and-fight-with-classloading.adoc
@@ -1,4 +1,5 @@
 = Maven plugin and fight with classloading
+:hp-image: /images/articles/maven_plugin.png
 :hp-tags: java, maven
 :toc: macro
 :release: 1.0
