--- a/_posts/2018-02-27-Docker-basics.adoc
+++ b/_posts/2018-02-27-Docker-basics.adoc
@@ -1,5 +1,6 @@
 = Docker basics
 :hp-tags: docker
+:hp-image: /images/articles/docker-starter.png
 :toc: macro
 :release: 1.0
 :published_at: 2018-02-27
