--- a/_posts/2018-06-14-Open-Shift-Config-Maps-to-store-data-from-pods.adoc
+++ b/_posts/2018-06-14-Open-Shift-Config-Maps-to-store-data-from-pods.adoc
@@ -1,5 +1,6 @@
 = OpenShift ConfigMaps to store application data from the pod
 :hp-tags: OpenShift, kubernetes
+:hp-image: /images/articles/config_maps.png
 :toc: macro
 :release: 1.0
 :published_at: 2018-06-14
