--- a/_posts/2018-07-23-Playing-with-Statefulset-in-Minishift.adoc
+++ b/_posts/2018-07-23-Playing-with-Statefulset-in-Minishift.adoc
@@ -1,5 +1,6 @@
 = Playing with Statefulset in Minishift
 :hp-tags: minishift, openshift, statefulset
+:hp-image: /images/articles/minishift-stateful.png
 :toc: macro
 :release: 1.0
 :published_at: 2018-07-23
